# cubature-sys

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: build.rs  ffi.rs  lib.rs
