[package]
name = "cubature-sys"
version = "1.0.5"
edition = "2021"
links = "cubature"
authors = ["Dan Alexander Koschier <dan.koschier@gmail.com>"]
build = "src/build.rs"
categories = ["mathematics", "external-ffi-bindings"]
description = "Bindings for cubature with support for Linux, macOS, and Windows."
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "vendor/COPYING.md",
    "vendor/*.h",
    "vendor/*.c",
    "vendor/README.md",
    "vendor/CMakeLists.txt",
]
keywords = ["cubature", "quadrature", "numeric", "integration", "sys"]
license-file = "vendor/COPYING.md"
readme = "README.md"
repository = "https://github.com/dankoschier/cubature-sys.git"

[lib]
doctest = false

[build-dependencies]
cmake = "0.1.52"
dunce = "1.0.5"

[dependencies]
libc = "0.2.169"
