[package]
name = "cubature-sys"
version = "1.0.6"
edition = "2024"
links = "cubature"
authors = ["Dan Alexander Koschier <dan.koschier@gmail.com>"]
build = "src/build.rs"
categories = ["mathematics", "external-ffi-bindings"]
description = "Bindings for cubature with support for Linux, macOS, and Windows."
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
    "vendor/COPYING.md",
    "vendor/*.h",
    "vendor/*.c",
    "vendor/README.md",
    "vendor/CMakeLists.txt",
]
keywords = ["cubature", "quadrature", "numeric", "integration", "sys"]
license-file = "vendor/COPYING.md"
readme = "README.md"
repository = "https://github.com/dankoschier/cubature-sys.git"

[lib]
doctest = false

[build-dependencies]
dunce = "1.0.5"
cc = "1"

[dependencies]
libc = "0.2"
